<resources>
    <string name="app_name">Euclydia</string>
    <string name="create">Create</string>
    <string name="title">Euclydia</string>
    <string name="list">List</string>
    <string name="no_name">LIFEFORM NOT FOUND</string>
    <string name="title1">Create</string>
    <string name="title2">A</string>
    <string name="title3">Shape</string>
    <string name="nameLabel">Name</string>
    <string name="sideLabel">Sides</string>
    <string name="childlabel">Child</string>
    <string name="adultlabel">Adult</string>
    <string name="genderlabel">\'Gender\'</string>
    <string name="malelabel">Male</string>
    <string name="femalelabel">Female</string>

    <string name="colorlabel">Color</string>
    <string name="x">X:</string>
    <string name="y">Y:</string>
    <string name="following">Following:</string>
    <string name="shape_n_list">Shape \n List</string>
    <string name="importbutton">Import</string>
    <string name="exportbutton">Export</string>
    <string name="nblabel">N/A</string>
    <string name="lengthlabel">Side Length</string>
    <string name="mute">mute</string>
</resources>