<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/title1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/title1"
        android:textColor="@color/blue"
        android:textSize="40sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/title2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/title2"
        android:textColor="@color/yellow"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/title1" />

    <TextView
        android:id="@+id/title3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/title3"
        android:textColor="@color/red"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/title2" />

    <EditText
        android:id="@+id/nameField"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="44dp"
        android:ems="10"
        android:inputType="text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/title3" />

    <TextView
        android:id="@+id/nameLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/nameLabel"
        app:layout_constraintBottom_toTopOf="@id/nameField"
        app:layout_constraintStart_toStartOf="@id/nameField"
        app:layout_constraintEnd_toEndOf="@id/nameField"/>

    <EditText
        android:id="@+id/sideField"
        android:layout_width="103dp"
        android:layout_height="46dp"
        android:layout_marginTop="44dp"
        android:ems="2"
        android:inputType="number"
        app:layout_constraintEnd_toStartOf="@id/nameField"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/nameField" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/sideField"
        app:layout_constraintStart_toStartOf="@id/sideField"
        app:layout_constraintEnd_toEndOf="@id/sideField"
        android:text="@string/sideLabel"/>

    <RadioButton
        android:id="@+id/age1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="249dp"
        app:layout_constraintStart_toStartOf="@+id/sideField"
        tools:layout_editor_absoluteY="265dp" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Adult"
        app:layout_constraintTop_toBottomOf="@+id/age1"
        app:layout_constraintStart_toStartOf="@+id/age1"
        app:layout_constraintEnd_toEndOf="@id/age1"/>

    <RadioButton
        android:id="@+id/age2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/age"
        tools:layout_editor_absoluteY="265dp" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Child"
        app:layout_constraintTop_toBottomOf="@id/age2"
        app:layout_constraintStart_toStartOf="@id/age2"
        app:layout_constraintEnd_toEndOf="@id/age2"/>

</androidx.constraintlayout.widget.ConstraintLayout>